--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "electron-is-dev": "^1.2.0",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.28.0",
     "nedb": "^1.8.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
@@ -55,13 +52,16 @@
     "electron": "^10.1.3",
     "electron-builder": "^22.7.0",
     "electron-reload": "^1.5.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier-standard": "^4.0.1",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.5.1",
+    "prettier-config-standard": "^4.0.0",
     "prop-types": "^15.8.1",
     "wait-on": "^5.1.0"
   },
