--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "electron-is-dev": "^1.2.0",
+    "eslint": "6.6.0",
     "nedb": "^1.8.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
@@ -52,7 +53,6 @@
     "electron": "^10.1.3",
     "electron-builder": "^22.7.0",
     "electron-reload": "^1.5.0",
-    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-prettier-standard": "^4.0.1",
     "eslint-config-standard": "^16.0.3",
