--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "release": "yarn react-build && electron-builder --publish=always",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "cz": "git-cz"
+    "commit": "cz"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,7 +49,9 @@
     ]
   },
   "devDependencies": {
+    "commitizen": "^4.3.0",
     "concurrently": "^5.2.0",
+    "cz-conventional-changelog": "^3.3.0",
     "electron": "^10.1.3",
     "electron-builder": "^22.7.0",
     "electron-reload": "^1.5.0",
@@ -83,5 +85,10 @@
     }
   },
   "main": "public/electron.js",
-  "homepage": "./"
+  "homepage": "./",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
